[WTF][Linux][GTK] Fix a minor bug in generic/WorkQueue when WorkQueue is immediately destroyed https://bugs.webkit.org/show_bug.cgi?id=180586

Reviewed by Darin Adler.

If WorkQueue is created and destroyed immediately, RunLoop::stop can be called
befire calling RunLoop::run(). At that time WorkQueue thread is not stopped.

This patch dispatches a task stopping its own RunLoop to ensure stop is done.
We also clean up WorkQueue implementation not to include unnecessary fields,
lock, condition, and thread.

* wtf/WorkQueue.h:
* wtf/generic/WorkQueueGeneric.cpp:
(WorkQueue::platformInitialize):
(WorkQueue::platformInvalidate):

Canonical link: https://commits.webkit.org/196504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225684 268f45cc-cd09-0410-ab3c-d52691b4dbfc