Source/WTF/wtf/generic/WorkQueueGeneric.cpp
@@ -30,29 +30,29 @@
 #include "config.h"
 #include "WorkQueue.h"
 
+#include <wtf/WallTime.h>
 #include <wtf/text/WTFString.h>
+#include <wtf/threads/BinarySemaphore.h>
 
 void WorkQueue::platformInitialize(const char* name, Type, QOS)
 {
-    LockHolder locker(m_initializeRunLoopConditionMutex);
-    m_workQueueThread = Thread::create(name, [this] {
-        {
-            LockHolder locker(m_initializeRunLoopConditionMutex);
-            m_runLoop = &RunLoop::current();
-            m_initializeRunLoopCondition.notifyOne();
-        }
+    BinarySemaphore semaphore;
+    Thread::create(name, [&] {
+        m_runLoop = &RunLoop::current();
+        semaphore.signal();
         m_runLoop->run();
-    });
-    m_initializeRunLoopCondition.wait(m_initializeRunLoopConditionMutex);
+    })->detach();
+    semaphore.wait(WallTime::infinity());
 }
 
 void WorkQueue::platformInvalidate()
 {
-    if (m_runLoop)
-        m_runLoop->stop();
-    if (m_workQueueThread) {
-        m_workQueueThread->detach();
-        m_workQueueThread = nullptr;
+    if (m_runLoop) {
+        Ref<RunLoop> protector(*m_runLoop);
+        protector->stop();
+        protector->dispatch([] {
+            RunLoop::current().stop();
+        });
     }
 }
 
